新文件：   api/ebcp_exhibition_room.go
