# model/ebcp_player_program.go
@@ -31,7 +31,7 @@ Table: o_ebcp_player_program
 
 JSON Sample
 -------------------------------------
-{    "id": "oNEuKAlkOBHDnDmHnxkrrGuMQ",    "created_by": "cylrtYMXFPjFDGNaisLMmkKHy",    "created_time": 38,    "updated_by": "oQtrNjCVEXiBFbtdGTgkgmlXv",    "updated_time": 19,    "name": "dEkHJONvFbuANJvvgSrgBtJGE",    "player_id": "KWWkLPOgluXnIjauPRpTquyUx",    "program_id": "CecUXuFKKilQlDkJsjqPDlWrR",    "program_index": 93}
+{    "id": "QkNFQKCmrlboMBhgNbewUIjMw",    "created_by": "pkYITZLeVVdYLylmFAqMXqcZV",    "created_time": 61,    "updated_by": "PCqaplXDCSQecfKkpFtlbQSsa",    "updated_time": 50,    "name": "mPOMHAUmQWnVYBfgISRhrkNYg",    "player_id": "ZVwZRiVTBUFeaVkVGcKlpZYGq",    "program_id": "LqxVODvOfHgMcfoTNeuUGJYmf",    "program_index": 59}
 
 
 
